fix max-width for .alignfull images and video

--- a/wp-content/themes/modern-journalist/sass/blocks/_layout.scss
+++ b/wp-content/themes/modern-journalist/sass/blocks/_layout.scss
@@ -56,8 +56,10 @@
     right: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
-    &.wp-block-image img {
+    &.wp-block-image img,
+    &.wp-block-video video {
       width: 100vw !important;
+      max-width: 100vw;
     }
   }
 }
